src/test/deca/context/invalid/homemade/tests/test29_param_void1.deca
// test invalide de la règle 2.9


class A {
    int val(void x){}
}